# tortilla

./: .gitignore  BUILD.bazel  SAM.dot  WORKSPACE  ops.proto  ops_pb.js  stream.proto  stream_pb.js  tortilla.proto  tortilla_pb.js  visualizeSAM.textproto
codegen/: backup.pb  ops_pb2.py  sam.pbtxt  stream_pb2.py  test.py  tortilla_pb2.py
proto/: comal.proto  ops.proto  stream.proto  tortilla.proto
tortilla-graphviz/: SAM-add-file.html  SAM-add.html  graph-add.dot  main.js  style.css
tortilla-graphviz/proto/: generateDotCode.js  generateDotCodeLocal.cjs  ops.proto  ops_pb2.py  parser.js  parser.py  stream_pb2.py  tortilla.proto  tortilla_pb2.py  visualizeSAM.textproto
tortilla-graphviz/proto/protoTemplates/: broadcast.textproto
