load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_compile")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "tortilla_proto",
    srcs = [
        "ops.proto",
        "stream.proto",
        "tortilla.proto",
    ],
)

cpp_proto_compile(
    name = "cpp_tortilla_proto",
    protos = [":tortilla_proto"],
)
